# hawir-backend

./: manage.py  pyproject.toml  requirements.txt
hawir_backend/: asgi.py  settings.py  urls.py  wsgi.py
